k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greenlogistics
spec:
  finalizers:
    - kubernetes
