k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
  namespace: greenlogistics
spec:
  type: ClusterIP
  selector:
    app: tracking
  ports:
    - port: 80
      targetPort: 80
